terminar em casa

--- a/biografiaRyaneLeao.html
+++ b/biografiaRyaneLeao.html
@@ -9,6 +9,10 @@
 <body>
     <main>
         <section>
+            <div class="background">
+                <img src="./assets/css/bg-livros.jpeg" alt="">
+            </div>
+
             <div class="container">
                 <div class="header">
                     <div class="row">
@@ -16,14 +20,21 @@
                             <img src="./assets/img/molieres_negras.png" alt="Mulheres negras na literatura">
                         </a>
 
-                        <img src="./assets/img/placeholder.png" alt="Ryane Leão" class="nome_autor">
+                        <img src="./assets/img/nome_Ryane-removebg-preview.png" alt="Ryane Leão" class="nome_autor">
 
-                        <img src="./assets/img/placeholder.png" alt="Foto da autora Ryane Leão" class="foto_autor">
+                        <img src="./assets/img/ryaneLeao.png" alt="Foto da autora Ryane Leão" class="foto_autor">
                     </div>
                 </div>
                 
                 <div class="menu">
-
+                    <nav>
+                        <ul>
+                            <li><a href="./biografiaRyaneLeao.html" id="selected">Biografia</a></li>
+                            <li><a href="./bibliografia.html">Bibliografia</a></li>
+                            <li><a href="./principalObra.html">Principal Obra</a></li>
+                        </ul>
+                    </nav>
+                    <div class="void"></div>
                 </div>
             </div>
         </section>
