Fixing the names of the HTML pages

--- a/biografiaRyaneLeao.html
+++ b/biografiaRyaneLeao.html
@@ -30,8 +30,8 @@
                     <nav>
                         <ul>
                             <li><a href="./biografiaRyaneLeao.html" id="selected">Biografia</a></li>
-                            <li><a href="./bibliografia.html">Bibliografia</a></li>
-                            <li><a href="./principalObra.html">Principal Obra</a></li>
+                            <li><a href="./bibliografiaRyaneLeao.html">Bibliografia</a></li>
+                            <li><a href="./principalObraRyaneLeao.html">Principal Obra</a></li>
                         </ul>
                     </nav>
                     <div class="void"></div>
