Tá tudo dando errado pqp

--- a/biografiaRyaneLeao.html
+++ b/biografiaRyaneLeao.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/autores.css">
-    <title>Ryane Leão</title>
+    <title>Ryane Leão - Biografia</title>
 </head>
 <body>
     <main>
@@ -26,15 +26,40 @@
                     </div>
                 </div>
                 
-                <div class="menu">
+                <div class="menu ryane">
                     <nav>
                         <ul>
-                            <li><a href="./biografiaRyaneLeao.html" id="selected">Biografia</a></li>
-                            <li><a href="./bibliografiaRyaneLeao.html">Bibliografia</a></li>
-                            <li><a href="./principalObraRyaneLeao.html">Principal Obra</a></li>
+                            <li><a href="./biografiaRyaneLeao.html" id="selected-r">BIOGRAFIA</a></li>
+                            <li><a href="./bibliografiaRyaneLeao.html">BIBLIOGRAFIA</a></li>
+                            <li><a href="./principalObraRyaneLeao.html">PRINCIPAL OBRA</a></li>
                         </ul>
                     </nav>
                     <div class="void"></div>
+                </div>
+
+                <div class="container">
+                    <div class="row">
+                        <h2 id="title-r">
+                            Ryane Leão: como surgiu a escritora?
+                        </h2>
+                        <div class="void"></div>
+                    </div>
+                </div>
+
+                <div class="conteudo">
+                    <div class="container">
+                        <div class="row">
+                            <p>Ryane Leão, nascida em Cuiabá no fim da década de 80 é uma mulher preta do axé poeta e professora brasileira. 
+                                Seu trabalho tem como tema a resistência das mulheres imerso na luta e no fortalecimento pela educação e artes.</p>
+                            <p>Cursou letras na Universidade Federal de São Paulo e no ano de 2008 começou a divulgar seus textos pela cidade em lambe-lambes e no seu perfil no Instagram, além de marcar presença em saraus e slams. 
+                                Ryane tem um projeto a rede social chamado Onde Jazz Meu Coração que possui bastantes seguidores.</p>
+                            <p>Em 2016 realizou uma campanha de financiamento para publicar seu primeiro livro que foi lançado no ano seguinte: Tudo Nela Brilha e Queima. 
+                                Livro frisado na defesa dos direitos das mulheres negras.</p>
+                            <p>Ryane também é empresária, fundou a Odara, instituição de ensino de língua inglesa com foco para mulheres negras e com preços acessíveis.</p>
+                           <div class="void"></div>
+                        </div>
+                    </div>
+                    
                 </div>
             </div>
         </section>
