Template biografia/obra semi-finalizado

--- a/bibliografiaRyaneLeao.html
+++ b/bibliografiaRyaneLeao.html
@@ -20,7 +20,7 @@
                             <img src="./assets/img/molieres_negras.png" alt="Mulheres negras na literatura">
                         </a>
 
-                        <img src="./assets/img/nome_Ryane-removebg-preview.png" alt="Ryane Leão" class="nome_autor">
+                        <img src="./assets/img/nome_Ryane-removebg-preview.png" alt="Ryane Leão" class="nome-r">
 
                         <img src="./assets/img/ryaneLeao.png" alt="Foto da autora Ryane Leão" class="foto_autor">
                     </div>
