--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
 
             <div class="autor">
-                <a href="./assets/autor.html"><img src="./assets/img/nome_Esmeralda-removebg-preview.png" alt=""></a>
+                <a href="./biografiaEsmeraldaRibeiro.html"><img src="./assets/img/nome_Esmeralda-removebg-preview.png" alt=""></a>
             </div>
 
             <div class="autor">
