--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
 
             <div class="autor">
-                <a href="./assets/autor.html"><img src="./assets/img/nome_Conceicao-removebg-preview.png" alt=""></a>
+                <a href="./biografiaConceicaoEvaristo.html"><img src="./assets/img/nome_Conceicao-removebg-preview.png" alt=""></a>
             </div>
         </div>
     </main>
