--- a/bibliografiaRyaneLeao.html
+++ b/bibliografiaRyaneLeao.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/autores.css">
     <title>Ryane Leão - Bibliografia</title>
 </head>
+
 <body>
     <main>
         <section>
@@ -25,7 +27,7 @@
                         <img src="./assets/img/ryaneLeao.png" alt="Foto da autora Ryane Leão" class="foto_autor">
                     </div>
                 </div>
-                
+
                 <div class="menu ryane">
                     <nav>
                         <ul>
@@ -37,7 +39,50 @@
                     <div class="void"></div>
                 </div>
             </div>
+
+            <input type="radio" id="s-1" name="slider-control" checked="checked">
+            <input type="radio" id="s-2" name="slider-control">
+            <!-- <input type="radio" id="s-3" name="slider-control"> -->
+            <div class="js-slider">
+                <figure class="js-slider_item img-1">
+                    <div class="js-slider_img">
+                        <img class="c-img-h-full" src="./assets/img/tudoNelaBrilhaEQueima.png"
+                            alt="">
+                    </div>
+                </figure>
+                <figure class="js-slider_item img-2">
+                    <div class="js-slider_img">
+                        <img class="c-img-h-full" src="assets/img/jamaisPecoDesculpasPorMeDerramar.png"
+                            alt="">
+                    </div>
+                </figure>
+                <!-- <figure class="js-slider_item img-3">
+                <div class="js-slider_img">
+                <img class="c-img-h-full" src="https://pics.codecolor.cn/images-opacity-slider/img_2_2.jpg" alt=""></div>
+                <figcaption class="wo-caption">
+                <h3 class="wo-h3">「風流無くてなゝくせ」ほおずき</h3>
+                <ul class="wo-credit">
+                    <li>大判 享和年間 (1801-04)</li>
+                    <li>米・個人蔵</li>
+                    <li>展示期間：1月30日 (水) ～ 2月18日 (月)</li></ul>
+                </figcaption>
+            </figure> -->
+                <div class="js-slider_nav">
+                    <label class="js-slider_nav_item s-nav-1 prev" for="s-2"></label>
+                    <label class="js-slider_nav_item s-nav-1 next" for="s-2"></label>
+                    <label class="js-slider_nav_item s-nav-2 prev" for="s-1"></label>
+                    <label class="js-slider_nav_item s-nav-2 next" for="s-1"></label>
+                    <label class="js-slider_nav_item s-nav-3 prev" for="s-2"></label>
+                    <label class="js-slider_nav_item s-nav-3 next" for="s-1"></label>
+                </div>
+                <div class="js-slider_indicator">
+                    <div class="js-slider-indi indi-1"></div>
+                    <div class="js-slider-indi indi-2"></div>
+                    <!-- <div class="js-slider-indi indi-3"></div> -->
+                </div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
