Lhe falta o @media

--- a/principalObraConceicaoEvaristo.html
+++ b/principalObraConceicaoEvaristo.html
@@ -32,9 +32,9 @@
                 <div class="menu conceicao">
                     <nav>
                         <ul>
-                            <li><a href="./biografiaConceicaoEvaristo.html" id="selected-c">BIOGRAFIA</a></li>
+                            <li><a href="./biografiaConceicaoEvaristo.html">BIOGRAFIA</a></li>
                             <li><a href="./bibliografiaConceicaoEvaristo.html">BIBLIOGRAFIA</a></li>
-                            <li><a href="./principalObraConceicaoEvaristo.html">PRINCIPAL OBRA</a></li>
+                            <li><a href="./principalObraConceicaoEvaristo.html" id="selected-c">PRINCIPAL OBRA</a></li>
                         </ul>
                     </nav>
                     <div class="void"></div>
@@ -43,7 +43,7 @@
                 <div class="container">
                     <div class="row">
                         <h2 id="title-c">
-                            Conceição Evaristo: como surgiu a escritora?
+                            Sua obra: "Ponciá Vicêncio"
                         </h2>
                         <div class="void"></div>
                     </div>
